MOB-375: Can not copy/move file in document